--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <meta name="apple-mobile-web-app-title" content="ズボラシェフAI" />
     <link rel="manifest" href="/manifest.json" />
     <title>Zubora Chef AI Application</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TS3VKDZFMB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TS3VKDZFMB');
+    </script>
   </head>
   <body>
     <div id="root"></div>
