Google AdSenseの実装: スクリプトとads.txtを追加

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
       gtag('config', 'G-TS3VKDZFMB');
     </script>
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2260591346657454"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
